--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,8 @@
 .pnp
 .pnp.js
 package-lock.json
-/node_modules
+./client/node_modules
+./micro-service/node_modules
 /docs/node_modules
 test.js
 coverage/
