--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -70,7 +70,7 @@
     "react/jsx-one-expression-per-line": "off",
     "react/prop-types": "off",
     "react/display-name": "off",
-    "linebreak-style": ["error", "unix"],
+    "linebreak-style": ["error", "windows"],
     "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "object-curly-newline": "off",
